# spotify-playlist-creator

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  main.py  pyproject.toml  skills-lock.json
.agents/skills/grill-with-docs/: SKILL.md
.agents/skills/impl/: SKILL.md
.claude/skills/code-review/: SKILL.md
.github/workflows/: ci.yml
docs/adr/: 0001-ep-classification-via-track-count-and-duration.md  0002-sync-is-additive-only.md  0003-hybrid-folder-creation.md  0004-album-playlist-detection-via-first-track-fingerprint.md  0005-split-create-album-playlists-for-dry-sync.md  0006-429-retry-requires-retry-after-header.md  0007-status-reporting-uses-module-level-callable.md  0008-fetch-owned-playlists-disabled-to-avoid-rate-limits.md  0009-batch-ep-classification-via-albums-endpoint.md  0010-write-endpoints-use-higher-proactive-delay.md  0011-album-playlists-created-oldest-first.md  0012-folder-prompt-precedes-playlist-creation.md  0013-limit-fetch-uses-backward-pagination.md  0014-last-fm-for-artist-genre.md  0015-hard-fail-on-missing-lastfm-api-key.md
spotify_playlist_creator/: __init__.py  api.py  artist_releases.py  auth.py  classify_releases.py  create_playlists.py  dry_sync.py  folder_prompt.py  lastfm.py  models.py  saved_albums.py  status.py
tests/: conftest.py  test_api.py  test_artist_releases.py  test_auth.py  test_classify_releases.py  test_create_playlists.py  test_dry_sync.py  test_folder_prompt.py  test_lastfm.py  test_main.py  test_models.py  test_placeholder.py  test_run.py  test_saved_albums.py  test_status.py
(+134 files in other folders)
