[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-playlist-creator"
version = "0.1.0"
description = "Reads Spotify liked albums and creates an organized local folder structure"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pre-commit>=3.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "types-python-dotenv>=0.1",
]

[tool.setuptools.packages.find]
include = ["spotify_playlist_creator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
strict = true
